--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="project-links">
                     <a href="https://github.com/yourusername/portfolio" target="_blank">GitHub</a>
-                    <a href="https://yourportfolio.com" target="_blank">Live Demo</a>
+                    <a href="https://sandei-travolta.github.io/portforlio_PLP/" target="_blank">Live Demo</a>
                 </div>
             </div>
             <div class="project-card">
