--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="project-links">
                     <a href="https://github.com/yourusername/portfolio" target="_blank">GitHub</a>
-                    <a href="https://sandei-travolta.github.io/portforlio_PLP/" target="_blank">Live Demo</a>
+                    <a href="" target="_blank">Live Demo</a>
                 </div>
             </div>
             <div class="project-card">
@@ -123,5 +123,8 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+    <footer class="footer">
+        <p>&copy; 2025 Travolta Sandei. All rights reserved.</p>
+    </footer>
 </body>
 </html>
