--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
             <li><a href="#work">Work Experience</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
-        <ul>
-            <li><img src="res/svgs/gmail.svg" width="20" height="20"></li>
-            <li><img src="res/svgs/linkedin.svg" width="20" height="20"></li>
-            <li><img src="res/svgs/github.svg" width="20" height="20"></li>
-            <li><img src="res/svgs/fiverr.svg" width="20" height="20"></li>
+                <ul>
+            <li>
+                <a href="mailto:travolta@gmail.com" target="_blank">
+                    <img src="res/svgs/gmail.svg" width="20" height="20" alt="Gmail">
+                </a>
+            </li>
+            <li>
+                <a href="https://linkedin.com/in/travolta-sandei-flutter-dev/" target="_blank">
+                    <img src="res/svgs/linkedin.svg" width="20" height="20" alt="LinkedIn">
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/sandei-travolta" target="_blank">
+                    <img src="res/svgs/github.svg" width="20" height="20" alt="GitHub">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.fiverr.com/travolta" target="_blank">
+                    <img src="res/svgs/fiverr.svg" width="20" height="20" alt="Fiverr">
+                </a>
+            </li>
         </ul>
     </nav>
     <div class="home" id="home">
